--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_tab_profile">Profile</string>
     <string name="title_tab_cart">Cart</string>
     <string name="title_tab_home">Home</string>
-
+    <string name="text_cart_is_empty">Cart is Empty</string>
     <string name="text_name">Hi, Muhammad Syihab</string>
     <string name="text_greetings">What you gonna eat today?</string>
     <string name="text_title_banner">Buy now for 30% cut</string>
@@ -21,4 +21,19 @@
     <string name="text_total_price">Total Harga</string>
     <string name="text_btn_add_to_cart">Tambahkan</string>
     <string name="text_btn_checkout">Checkout</string>
+    <string name="text_add_to_cart_success">Add to cart Success</string>
+    <string name="add_to_cart_failed">Add to cart failed</string>
+    <string name="loading">Loading</string>
+    <string name="total_quantity">x%s</string>
+    <string name="text_checkout">Checkout</string>
+    <string name="text_title_order_confirmation">Konfirmasi Pesanan</string>
+    <string name="text_delivery_method">Metode Pengiriman</string>
+    <string name="text_pick_up">Ambil Sendiri</string>
+    <string name="text_delivery">Antar</string>
+    <string name="text_payment_method">Metode Pembayaran</string>
+    <string name="text_cash">Tunai</string>
+    <string name="text_e_wallet">E-Money</string>
+    <string name="shopping_summary">Pesanan Anda</string>
+    <string name="text_order_success">Pesanan Anda Berhasil</string>
+    <string name="text_dialog_total">Total</string>
 </resources>
